@startuml
title Diagramme de classes - Blog Tetouane créative

' ====== CLASSES ======

class User {
  int id
  string nom
  string email
  string password
  enum role  // visiteur, editeur
}

class Article {
  int id
  string titre
  string slug
  text excrept
  text contenu
  string image
  enum status // publié, brouillion, programmé
  
}

class Commentaire {
  int id
  text contenu
  int article_id
  int user_id  

}

class Tag {
  int id
  string nom
  string slug
}

class ArticleTag {
  int id
  int article_id
  int tag_id
}

' ====== RELATIONS ======

' User crée des articles
User "1" -- "N" Article : crée >

' User écrit des commentaires
User "1" -- "N" Commentaire : écrit >

' Article reçoit des commentaires
Article "1" -- "N" Commentaire : reçoit >

' Article <--> Tag (many-to-many via pivot)
Article "N" -- "N" Tag : tague >
ArticleTag .. Article
ArticleTag .. Tag

@enduml